# QT_Opengl_Platform

./: .gitignore  CMakeLists.txt  README.md
DcmtkUtil/: CMakeLists.txt
DcmtkUtil/include/: DcmCStoreSender.h  DcmtkUtil_Export.h  MyCStoreSCP.h  MySCP.h  pch.h
DcmtkUtil/source/: DcmCStoreSender.cpp  MyCStoreSCP.cpp  MySCP.cpp
GLFWUtil/: CMakeLists.txt
GLFWUtil/include/: CheckError.h  GLFWApplication.h  GLFWHelper.h  GLFWUtilExport.h  pch.h
GLFWUtil/source/: CheckError.cpp  GLFWApplication.cpp  GLFWHelper.cpp
OpencvUtil/: CmakeLists.txt
OpencvUtil/include/: MyThread_DCMTK_SCP_Work.h  OpenCVImageUtil.h  OpenCVUtil.h  OpenCVUtil_Export.h  OpenCVVideo.h  pch.h
OpencvUtil/source/: MyThread_DCMTK_SCP_Work.cpp  OpenCVImageUtil.cpp  OpenCVUtil.cpp  OpenCVVideo.cpp
QtGuiApp/: CMakeLists.txt  resources.qrc
QtGuiApp/assets/fbx/cat/: FBX_7015.fbx  声明.txt  绘图狗艺素网huitugou.com.url
QtGuiApp/assets/shaders/: cube.frag  cube.vert  fragment.glsl  fragmentgeometry.glsl  fragmentmat.glsl  grassInstance.frag  grassInstance.vert  image.frag  image.vert  logo.frag  logo.vert  phong.frag  phong.vert  phongEnv.frag  phongInstance.frag  phongInstance.vert  phongOpacityMask.vert  screen.frag  screen.vert  vertex.glsl  vertexcolor.glsl  vertexgeometry.glsl  vertexmat.glsl  white.frag  white.vert
QtGuiApp/assets/shaders/oldershader/: fragment-ori.glsl  fragmentgeometry.glsl  fragmentmixtexture.glsl  fragmentmove.glsl  vertex.glsl  vertexgeometry.glsl  vertexmixtexture.glsl  vertexmove.glsl  vertexpingpuyidong.glsl
QtGuiApp/code/: CustomSplashScreen.h  GlobalConfig.h  MainWindow-UI.h  MainWindow.cpp  MainWindow.h  MyColorSelecter.cpp  MyColorSelecter.h  MyGLWidget.cpp  MyGLWidget.h  MyObject.h  MyProgressDialog.cpp  MyStruct.h  MyThread_QRunnable.cpp  MyThread_Work.cpp  OpenCVImageUtil.h  customsplashscreen.cpp  main.cpp  pch.h
QtGuiApp/code/camera/: MyCamera.cpp  MyCamera.h  MyCameraControl.cpp  MyCameraControl.h  MyGameCameraControl.cpp  MyGameCameraControl.h  MyOrthographicCamera.cpp  MyOrthographicCamera.h  MyPerspectiveCamera.cpp  MyPerspectiveCamera.h  MyTrackBallCameraControl.cpp  MyTrackBallCameraControl.h
QtGuiApp/code/opengl/: MyAssimpInstanceLoader.cpp  MyAssimpInstanceLoader.h  MyAssimpLoader.cpp  MyAssimpLoader.h  MyGLWidget.cpp  MyGLWidget.h  MyGeometry.cpp  MyGeometry.h  MyMesh.cpp  MyMesh.h  MyObject.cpp  MyObject.h  MyScene.cpp  MyScene.h  MyShader.cpp  MyShader.h  MyTexture.cpp  MyTexture.h
QtGuiApp/code/opengl/Light/: MyAmbientLight.cpp  MyAmbientLight.h  MyDirectionalLight.cpp  MyDirectionalLight.h  MyLight.cpp  MyLight.h  MyPointLight.cpp  MyPointLight.h  MySpotLight.cpp  MySpotLight.h
QtGuiApp/code/opengl/Material/: MyImageMaterial.cpp  MyImageMaterial.h  MyMaterial.cpp  MyMaterial.h  MyPhongMaterial.cpp  MyPhongMaterial.h  MyWhiteMaterial.cpp  MyWhiteMaterial.h  MycubeMaterial.cpp  MycubeMaterial.h  MydepthMaterial.cpp  MydepthMaterial.h  MygrassInstanceMaterial.cpp  MygrassInstanceMaterial.h  MyopacityMaskMaterial.cpp  MyopacityMaskMaterial.h  MyphongEnvMaterial.cpp  MyphongEnvMaterial.h  MyphongInstanceMaterial.cpp  MyphongInstanceMaterial.h  MyscreenMaterial.cpp  MyscreenMaterial.h
QtGuiApp/code/opengl/framebuffer/: framebuffer.cpp  framebuffer.h
QtGuiApp/code/opengl/mesh/: MyMesh.cpp  MyMesh.h  MyinstancedMesh.cpp  MyinstancedMesh.h
QtGuiApp/code/opengl/renderer/: MyRenderer.cpp  MyRenderer.h
QtGuiApp/code/opengl/tools/: MyTools.cpp  MyTools.h
QtGuiApp/code/thread/: MyThread.cpp  MyThread_QRunnable.h
QtGuiApp/control/imageswitch/: imageswitch.cpp  imageswitch.h
QtGuiApp/include/: AllHeader.h  MainWindow-UI.h  MainWindow.h  MyCamera.h  MyCameraControl.h  MyGLWidget.h  MyGLWidget.h.bak  MyOpenCVDialog.h  MyOrthographicCamera.h  MyPerspectiveCamera.h  MyProgressDialog.h  MyShader.h  MyTexture.h  MyThread.h  MyThread_Work.h  MyTrackBallCameraControl.h  OpenCVTest_UI.h  VAOOpenGLWidget.h  pch.h
QtGuiApp/res/QSS/: ElegantDark.qss
QtGuiApp/res/Qml/: loading.qml  login.qml  run.bat
QtGuiApp/res/icon/: apprc.aps
QtGuiApp/source/: GlobalConfig.cpp  MainWindow.cpp  MyCamera.cpp  MyCameraControl.cpp  MyGLWidget.cpp  MyGLWidget.cpp.bak  MyOpenCVDialog.cpp  MyOrthographicCamera.cpp  MyPerspectiveCamera.cpp  MyShader.cpp  MyTexture.cpp  MyTrackBallCameraControl.cpp  VAOOpenGLWidget.cpp  checkError.cpp  main.cpp
ui/: MainWindow-UI.h  MainWindow-UI.ui  OpenCVTest_UI.ui  UI文件转换.bat
