cmake_minimum_required(VERSION 3.20)
project(Medcical-QT-Opengl)

file(GLOB_RECURSE ASSETS 
    "${CMAKE_CURRENT_SOURCE_DIR}/assets/*"
    "${CMAKE_CURRENT_SOURCE_DIR}/assets/*/*"  # 显式包含子目录
)

# 修正 source_group 的 TREE 参数
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" 
    PREFIX "Assets"  # 在VS中显示的根文件夹名称
    FILES ${ASSETS}
)

# 设置源文件编码为 UTF - 8
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /utf-8")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")

# 设置c++ 标准
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 输出目录管理
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/bin)

# 按构建类型隔离输出目录
foreach(OUTPUTCONFIG IN ITEMS DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
    string(TOUPPER ${OUTPUTCONFIG} CONFIG)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG} ${CMAKE_CURRENT_LIST_DIR}/bin/${OUTPUTCONFIG})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONFIG} ${CMAKE_CURRENT_LIST_DIR}/bin/${OUTPUTCONFIG})
endforeach()

# 添加子项目
add_subdirectory(QtGuiApp)
#add_subdirectory(GLFWUtil)


# 设置 QtGuiApp 为 Visual Studio 的启动项目
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT QtGuiApp)